# linux-voice-assistant

./: AGENTS.md  README.md  config.json  pyproject.toml
docs/: architecture.md  tuning.md
linux_voice_assistant/: __main__.py  config.py  distance_reader.py  entity.py  gpio_controller.py  local_ipc.py  models.py  mpv_player.py  satellite.py  vl53l0x_reader.py  vl53l1x_reader.py
linux_voice_assistant/frontpaneld/: __init__.py  __main__.py
linux_voice_assistant/visd/: __init__.py  __main__.py  detector.py  test_stream.py
script/: led_off.py  run  run_studio_lva.sh
systemd/: linux-voice-assistant-frontpaneld.service  linux-voice-assistant-visd.service  linux-voice-assistant.service
tests/: test_placeholder.py  test_visd_test_stream.py
